--- a/05-batch/code/03_test.ipynb
+++ b/05-batch/code/03_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "72505747",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,7 @@
     {
      "data": {
       "text/plain": [
-       "'/home/alexey/spark/spark-3.0.3-bin-hadoop3.2/python/pyspark/__init__.py'"
+       "'c:\\\\Users\\\\rajmi\\\\AppData\\\\Local\\\\Programs\\\\Python\\\\Python311\\\\Lib\\\\site-packages\\\\pyspark\\\\__init__.py'"
       ]
      },
      "execution_count": 3,
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "29f1cf4c",
    "metadata": {},
    "outputs": [],
@@ -43,26 +43,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "cf6d80ad",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: An illegal reflective access operation has occurred\n",
-      "WARNING: Illegal reflective access by org.apache.spark.unsafe.Platform (file:/home/alexey/spark/spark-3.0.3-bin-hadoop3.2/jars/spark-unsafe_2.12-3.0.3.jar) to constructor java.nio.DirectByteBuffer(long,int)\n",
-      "WARNING: Please consider reporting this to the maintainers of org.apache.spark.unsafe.Platform\n",
-      "WARNING: Use --illegal-access=warn to enable warnings of further illegal reflective access operations\n",
-      "WARNING: All illegal access operations will be denied in a future release\n",
-      "22/02/15 22:22:51 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
-      "Using Spark's default log4j profile: org/apache/spark/log4j-defaults.properties\n",
-      "Setting default log level to \"WARN\".\n",
-      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "spark = SparkSession.builder \\\n",
     "    .master(\"local[*]\") \\\n",
@@ -72,25 +56,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "3f604529",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "--2022-02-15 22:23:22--  https://s3.amazonaws.com/nyc-tlc/misc/taxi+_zone_lookup.csv\n",
-      "Resolving s3.amazonaws.com (s3.amazonaws.com)... 54.231.196.8\n",
-      "Connecting to s3.amazonaws.com (s3.amazonaws.com)|54.231.196.8|:443... connected.\n",
-      "HTTP request sent, awaiting response... 200 OK\n",
-      "Length: 12322 (12K) [application/octet-stream]\n",
-      "Saving to: ‘taxi+_zone_lookup.csv’\n",
-      "\n",
-      "taxi+_zone_lookup.c 100%[===================>]  12.03K  --.-KB/s    in 0s      \n",
-      "\n",
-      "2022-02-15 22:23:23 (114 MB/s) - ‘taxi+_zone_lookup.csv’ saved [12322/12322]\n",
-      "\n"
+      "'wget' is not recognized as an internal or external command,\n",
+      "operable program or batch file.\n"
      ]
     }
    ],
@@ -100,34 +75,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "12342345",
+   "execution_count": 6,
+   "id": "115ec2b6",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\"LocationID\",\"Borough\",\"Zone\",\"service_zone\"\r",
-      "\r\n",
-      "1,\"EWR\",\"Newark Airport\",\"EWR\"\r",
-      "\r\n",
-      "2,\"Queens\",\"Jamaica Bay\",\"Boro Zone\"\r",
-      "\r\n",
-      "3,\"Bronx\",\"Allerton/Pelham Gardens\",\"Boro Zone\"\r",
-      "\r\n",
-      "4,\"Manhattan\",\"Alphabet City\",\"Yellow Zone\"\r",
-      "\r\n",
-      "5,\"Staten Island\",\"Arden Heights\",\"Boro Zone\"\r",
-      "\r\n",
-      "6,\"Staten Island\",\"Arrochar/Fort Wadsworth\",\"Boro Zone\"\r",
-      "\r\n",
-      "7,\"Queens\",\"Astoria\",\"Boro Zone\"\r",
-      "\r\n",
-      "8,\"Queens\",\"Astoria Park\",\"Boro Zone\"\r",
-      "\r\n",
-      "9,\"Queens\",\"Auburndale\",\"Boro Zone\"\r",
-      "\r\n"
+      "File downloaded successfully!\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "\n",
+    "url = 'https://s3.amazonaws.com/nyc-tlc/misc/taxi+_zone_lookup.csv'\n",
+    "\n",
+    "response = requests.get(url)\n",
+    "\n",
+    "with open('taxi+_zone_lookup.csv', 'wb') as file:\n",
+    "    file.write(response.content)\n",
+    "\n",
+    "print(\"File downloaded successfully!\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "12342345",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "'head' is not recognized as an internal or external command,\n",
+      "operable program or batch file.\n"
      ]
     }
    ],
@@ -137,7 +121,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
+   "id": "e31e915a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   LocationID        Borough                     Zone service_zone\n",
+      "0           1            EWR           Newark Airport          EWR\n",
+      "1           2         Queens              Jamaica Bay    Boro Zone\n",
+      "2           3          Bronx  Allerton/Pelham Gardens    Boro Zone\n",
+      "3           4      Manhattan            Alphabet City  Yellow Zone\n",
+      "4           5  Staten Island            Arden Heights    Boro Zone\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df_p = pd.read_csv('taxi+_zone_lookup.csv')\n",
+    "\n",
+    "print(df_p.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "809464d0",
    "metadata": {},
    "outputs": [],
@@ -149,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "e36dd996",
    "metadata": {},
    "outputs": [
@@ -192,41 +203,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "cb547351",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      "[Stage 4:>                                                          (0 + 1) / 1]\r",
-      "\r",
-      "                                                                                \r"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df.write.parquet('zones')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "02fe2bdb",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "total 28K\r\n",
-      "-rw-rw-r-- 1 alexey alexey 6.8K Feb 15 22:25 Untitled.ipynb\r\n",
-      "-rw-rw-r-- 1 alexey alexey  13K Aug 17  2016 taxi+_zone_lookup.csv\r\n",
-      "drwxr-xr-x 2 alexey alexey 4.0K Feb 15 22:25 zones\r\n"
+      "'ls' is not recognized as an internal or external command,\n",
+      "operable program or batch file.\n"
      ]
     }
    ],
@@ -236,8 +234,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "659f0812",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spark.stop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4ef88a06",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -259,7 +267,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
