Spark - batch processing

--- a/05-batch/code/09_spark_gcs.ipynb
+++ b/05-batch/code/09_spark_gcs.ipynb
@@ -2,6 +2,66 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "27ca89f2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# !pip install google-cloud-storage\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7f6b1a1b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import os\n",
+    "# os.environ[\"GOOGLE_APPLICATION_CREDENTIALS\"] = \"E:\\\\HCL_Technical_Lead\\\\SIE_OSIV_HCL_TRAINING\\\\PYTHON_DS_DE\\\\Pgadmin_datatalks_sql_DATAPIPELINE\\\\01-docker-terraform\\\\1_terraform_gcp\\\\terraform\\\\keys\\\\mycred.json\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0948512d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# from google.cloud import storage\n",
+    "\n",
+    "# def download_blob(bucket_name, source_blob_name, destination_file_name):\n",
+    "#     \"\"\"Downloads a blob from the bucket.\"\"\"\n",
+    "#     storage_client = storage.Client()\n",
+    "#     bucket = storage_client.bucket(bucket_name)\n",
+    "#     blob = bucket.blob(source_blob_name)\n",
+    "\n",
+    "#     blob.download_to_filename(destination_file_name)\n",
+    "\n",
+    "#     print(f\"Blob {source_blob_name} downloaded to {destination_file_name}.\")\n",
+    "\n",
+    "# # Set your GCS bucket name\n",
+    "# bucket_name = \"hadoop-lib\"\n",
+    "# # Set the name of the blob (the file) you want to download\n",
+    "# blob_name = \"gcs/gcs-connector-hadoop3-2.2.5.jar\"\n",
+    "# # Set the local file name where you want to save the downloaded file\n",
+    "# local_file_name = \"gcs-connector-hadoop3-2.2.5.jar\"\n",
+    "\n",
+    "# download_blob(bucket_name, blob_name, local_file_name)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "debc24b8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spark.stop()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "id": "3307b886",
    "metadata": {},
@@ -20,44 +80,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "credentials_location = '/home/alexey/.google/credentials/google_credentials.json'\n",
+    "credentials_location = 'E:\\\\HCL_Technical_Lead\\\\SIE_OSIV_HCL_TRAINING\\\\PYTHON_DS_DE\\\\Pgadmin_datatalks_sql_DATAPIPELINE\\\\01-docker-terraform\\\\1_terraform_gcp\\\\terraform\\\\keys\\\\mycred.json'\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "27f299d2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "conf = SparkConf() \\\n",
     "    .setMaster('local[*]') \\\n",
-    "    .setAppName('test') \\\n",
-    "    .set(\"spark.jars\", \"./lib/gcs-connector-hadoop3-2.2.5.jar\") \\\n",
+    "    .setAppName('GCP_CONNECTION') \\\n",
+    "    .set(\"spark.jars\",\"E:\\\\HCL_Technical_Lead\\\\SIE_OSIV_HCL_TRAINING\\\\PYTHON_DS_DE\\\\Pgadmin_datatalks_sql_DATAPIPELINE\\\\05-batch\\\\code\\\\gcs-connector-hadoop3-2.2.5.jar\") \\\n",
     "    .set(\"spark.hadoop.google.cloud.auth.service.account.enable\", \"true\") \\\n",
     "    .set(\"spark.hadoop.google.cloud.auth.service.account.json.keyfile\", credentials_location)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "b83404e8",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: An illegal reflective access operation has occurred\n",
-      "WARNING: Illegal reflective access by org.apache.spark.unsafe.Platform (file:/home/alexey/spark/spark-3.0.3-bin-hadoop3.2/jars/spark-unsafe_2.12-3.0.3.jar) to constructor java.nio.DirectByteBuffer(long,int)\n",
-      "WARNING: Please consider reporting this to the maintainers of org.apache.spark.unsafe.Platform\n",
-      "WARNING: Use --illegal-access=warn to enable warnings of further illegal reflective access operations\n",
-      "WARNING: All illegal access operations will be denied in a future release\n",
-      "22/03/30 12:25:23 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
-      "Using Spark's default log4j profile: org/apache/spark/log4j-defaults.properties\n",
-      "Setting default log level to \"WARN\".\n",
-      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "sc = SparkContext(conf=conf)\n",
     "\n",
     "hadoop_conf = sc._jsc.hadoopConfiguration()\n",
     "\n",
-    "hadoop_conf.set(\"fs.AbstractFileSystem.gs.impl\",  \"com.google.cloud.hadoop.fs.gcs.GoogleHadoopFS\")\n",
+    "hadoop_conf.set(\"fs.AbstractFileSystem.gs.impl\",\"com.google.cloud.hadoop.fs.gcs.GoogleHadoopFS\")\n",
     "hadoop_conf.set(\"fs.gs.impl\", \"com.google.cloud.hadoop.fs.gcs.GoogleHadoopFileSystem\")\n",
     "hadoop_conf.set(\"fs.gs.auth.service.account.json.keyfile\", credentials_location)\n",
     "hadoop_conf.set(\"fs.gs.auth.service.account.enable\", \"true\")"
@@ -65,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "c4713e2b",
    "metadata": {},
    "outputs": [],
@@ -77,20 +130,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "1ee1eb1d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df_green = spark.read.parquet('gs://dtc_data_lake_de-zoomcamp-nytaxi/pq/green/*/*')"
+    "df_green = spark.read.parquet('gs://terraform_gcs_dataset_s100rab_16042024/pq/green/*/*')"
    ]
   },
   {
@@ -99,13 +144,6 @@
    "id": "104b40ab",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
-     ]
-    },
     {
      "data": {
       "text/plain": [
@@ -123,11 +161,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "f56a885d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "spark.stop()"
+   ]
   }
  ],
  "metadata": {
@@ -146,7 +186,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
